Fixed container overflow issue

--- a/WebUI/src/style/style.scss
+++ b/WebUI/src/style/style.scss
@@ -1,6 +1,7 @@
 * {
   font-family: Arial, sans-serif!important;
 }
+
 #viewport-container {
   background: none !important;
   pointer-events: none;
@@ -15,6 +16,14 @@
 .lm_content {
   background: rgba(34, 34, 34, 0.8)!important;
   color: #999;
+  height: 100%;
+}
+.glComponent {
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
 }
 .lm_goldenlayout {
   background-color: transparent!important;
